cabal-version: 3.0
name:          hq
version:       0.1.0.0
license:       MIT
homepage:      https://github.com/DeviousStoat/hq
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/DeviousStoat/hq

common config
  ghc-options:        -Wall -Wno-unused-do-bind -Wno-type-defaults
  build-depends:
    , base        ^>=4.17.2.0
    , megaparsec
    , tagsoup
    , text

  default-language:   Haskell2010
  default-extensions: OverloadedStrings

library
  import:          config
  hs-source-dirs:  src
  exposed-modules:
    Text.HTML.Selector
    Text.HTML.Selector.Matcher

executable hq
  import:         config
  build-depends:
    , hq
    , optparse-applicative

  hs-source-dirs: app
  main-is:        Main.hs

test-suite spec
  import:         config
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  build-depends:
    , hq
    , hspec
    , hspec-megaparsec
